(lang dune 3.11)

(name rtree)

(generate_opam_files true)

(source
 (github remikeat/rtree))

(authors "Remi KEAT")

(maintainers "Remi KEAT")

(license LICENSE)

(documentation https://github.com/remikeat/rtree)

(package
 (name rtree)
 (synopsis "RTree")
 (description "RTree")
 (depends ocaml dune)
 (tags ("rtree")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
